Proyecto/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    AMPERSAND
    ARRAY_ASSIGNATION
    AS
    BOOL
    BOOLAND
    BOOLOR
    BREAK
    CASE
    CHR
    CLASS
    CLONE
    COMMENTMC
    COMMENTMO
    COMMENTMULTIPLELINE
    COMMENTO
    COMMENTONELINE
    CONSTRUCTOR
    CONTINUE
    CQUESTION
    CSBRACKET
    DECLARE
    DESTRUCTOR
    DOUBLEPOINTS
    DQUOTATION
    ELSEIF
    ENDIF
    ENDSWITCH
    ENDWHILE
    EXTENDS
    FINAL
    FLOAT
    FOREACH
    GLOBAL
    GOTO
    HASHTAG
    IMPLEMENTS
    INCLUDE
    INCLUDE_ONCE
    INT
    INTERFACE
    NEW
    NULL
    OSBRACKET
    POINT
    PRINT
    PRIVATE
    PROTECTED
    PUBLIC
    REQUIRE
    REQUIRE_ONCE
    SPACE
    SQUOTATION
    STATIC
    STRING
    SWITCH
    TRAIT
    UNDERSCORE
    VAR
    VARIABLE
    VOID

Grammar

Rule 0     S' -> program
Rule 1     program -> PHPDECLARATION declaracion_sentencias PHPCLOSING
Rule 2     declaracion_sentencias -> sentencias declaracion_sentencias
Rule 3     declaracion_sentencias -> sentencias
Rule 4     sentencias -> sentassign
Rule 5     sentencias -> call_function SEMICOLON
Rule 6     sentencias -> sentif
Rule 7     sentencias -> sentecho
Rule 8     sentencias -> sentfunc
Rule 9     sentencias -> sentreturn
Rule 10    sentencias -> sentfor
Rule 11    sentencias -> sentwhile
Rule 12    sentencias -> sentdowhile
Rule 13    sentreturn -> RETURN type SEMICOLON
Rule 14    sentreturn -> RETURN cond SEMICOLON
Rule 15    sentecho -> ECHO typevar SEMICOLON
Rule 16    sentecho -> ECHO exp SEMICOLON
Rule 17    sentecho -> ECHO cond SEMICOLON
Rule 18    sentif -> IF genif auxsentif
Rule 19    auxsentif -> ELSE IF genif auxsentif
Rule 20    auxsentif -> ELSE OCBRACKET declaracion_sentencias CCBRACKET
Rule 21    auxsentif -> empty
Rule 22    genif -> OPARENTHESIS cond CPARENTHESIS OCBRACKET declaracion_sentencias CCBRACKET
Rule 23    sentassign -> ID EQUAL exp SEMICOLON
Rule 24    sentassign -> ID PLUSPLUS SEMICOLON
Rule 25    sentassign -> ID MINUSMINUS SEMICOLON
Rule 26    bool -> TRUE
Rule 27    bool -> FALSE
Rule 28    oplogicos -> AND
Rule 29    oplogicos -> OR
Rule 30    oplogicos -> XOR
Rule 31    oplogicos -> NOT
Rule 32    exp -> expsimple opcomparacion expsimple
Rule 33    exp -> OPARENTHESIS expsimple opcomparacion expsimple CPARENTHESIS
Rule 34    exp -> expsimple
Rule 35    opcomparacion -> EQUALE
Rule 36    opcomparacion -> DEQUAL
Rule 37    opcomparacion -> IDENTIC
Rule 38    opcomparacion -> GREAT
Rule 39    opcomparacion -> GREATE
Rule 40    opcomparacion -> LESS
Rule 41    opcomparacion -> LESSE
Rule 42    expsimple -> expsimple opsuma term
Rule 43    expsimple -> term
Rule 44    term -> term opmult factor
Rule 45    term -> factor
Rule 46    factor -> NUMBER
Rule 47    factor -> ID
Rule 48    factor -> call_function
Rule 49    factor -> OPARENTHESIS expsimple CPARENTHESIS
Rule 50    typevar -> NUMBER
Rule 51    typevar -> STRINGWR
Rule 52    typevar -> STRINGGWR
Rule 53    typevar -> TRUE
Rule 54    typevar -> FALSE
Rule 55    opsuma -> PLUS
Rule 56    opsuma -> SCORE
Rule 57    opmult -> TIMES
Rule 58    opmult -> SLASH
Rule 59    opmult -> PERCENTAGE
Rule 60    opmult -> POW
Rule 61    cond -> type
Rule 62    cond -> cond opcomparacion cond
Rule 63    cond -> cond oplogicos cond
Rule 64    cond -> OPARENTHESIS type CPARENTHESIS
Rule 65    cond -> OPARENTHESIS cond CPARENTHESIS
Rule 66    type -> typevar
Rule 67    type -> var_declaration_gen
Rule 68    var_declaration_gen -> ID
Rule 69    var_declaration_gen -> ID PLUSPLUS
Rule 70    var_declaration_gen -> ID MINUSMINUS
Rule 71    var_declaration_gen -> MINUSMINUS ID
Rule 72    var_declaration_gen -> PLUSPLUS ID
Rule 73    var_declaration_gen -> typevar
Rule 74    var_declaration_gen -> exp
Rule 75    arg -> var_declaration_gen
Rule 76    arg -> type
Rule 77    arg -> expsimple
Rule 78    arg -> type COMMA arg
Rule 79    arg -> STRINGWR
Rule 80    arg -> STRINGGWR
Rule 81    arg -> var_declaration_gen COMMA arg
Rule 82    arg -> STRINGWR COMMA arg
Rule 83    arg -> STRINGGWR COMMA arg
Rule 84    arg -> <empty>
Rule 85    argfunc -> ID
Rule 86    argfunc -> ID COMMA argfunc
Rule 87    argfunc -> <empty>
Rule 88    sentfunc -> FUNCTION NAMEFUNCTION OPARENTHESIS argfunc CPARENTHESIS OCBRACKET declaracion_sentencias CCBRACKET
Rule 89    call_function -> NAMEFUNCTION
Rule 90    call_function -> NAMEFUNCTION OPARENTHESIS arg CPARENTHESIS
Rule 91    sentfor -> FOR OPARENTHESIS ID EQUAL expsimple SEMICOLON cond SEMICOLON expsimple CPARENTHESIS OCBRACKET declaracion_sentencias CCBRACKET
Rule 92    sentfor -> FOR OPARENTHESIS ID EQUAL expsimple SEMICOLON cond SEMICOLON ID PLUSPLUS CPARENTHESIS OCBRACKET declaracion_sentencias CCBRACKET
Rule 93    sentfor -> FOR OPARENTHESIS ID EQUAL expsimple SEMICOLON cond SEMICOLON ID MINUSMINUS CPARENTHESIS OCBRACKET declaracion_sentencias CCBRACKET
Rule 94    sentwhile -> WHILE OPARENTHESIS cond CPARENTHESIS OCBRACKET declaracion_sentencias CCBRACKET
Rule 95    sentdowhile -> DO OCBRACKET declaracion_sentencias CCBRACKET WHILE OPARENTHESIS cond CPARENTHESIS SEMICOLON
Rule 96    empty -> <empty>

Terminals, with rules where they appear

ABSTRACT             : 
AMPERSAND            : 
AND                  : 28
ARRAY_ASSIGNATION    : 
AS                   : 
BOOL                 : 
BOOLAND              : 
BOOLOR               : 
BREAK                : 
CASE                 : 
CCBRACKET            : 20 22 88 91 92 93 94 95
CHR                  : 
CLASS                : 
CLONE                : 
COMMA                : 78 81 82 83 86
COMMENTMC            : 
COMMENTMO            : 
COMMENTMULTIPLELINE  : 
COMMENTO             : 
COMMENTONELINE       : 
CONSTRUCTOR          : 
CONTINUE             : 
CPARENTHESIS         : 22 33 49 64 65 88 90 91 92 93 94 95
CQUESTION            : 
CSBRACKET            : 
DECLARE              : 
DEQUAL               : 36
DESTRUCTOR           : 
DO                   : 95
DOUBLEPOINTS         : 
DQUOTATION           : 
ECHO                 : 15 16 17
ELSE                 : 19 20
ELSEIF               : 
ENDIF                : 
ENDSWITCH            : 
ENDWHILE             : 
EQUAL                : 23 91 92 93
EQUALE               : 35
EXTENDS              : 
FALSE                : 27 54
FINAL                : 
FLOAT                : 
FOR                  : 91 92 93
FOREACH              : 
FUNCTION             : 88
GLOBAL               : 
GOTO                 : 
GREAT                : 38
GREATE               : 39
HASHTAG              : 
ID                   : 23 24 25 47 68 69 70 71 72 85 86 91 92 92 93 93
IDENTIC              : 37
IF                   : 18 19
IMPLEMENTS           : 
INCLUDE              : 
INCLUDE_ONCE         : 
INT                  : 
INTERFACE            : 
LESS                 : 40
LESSE                : 41
MINUSMINUS           : 25 70 71 93
NAMEFUNCTION         : 88 89 90
NEW                  : 
NOT                  : 31
NULL                 : 
NUMBER               : 46 50
OCBRACKET            : 20 22 88 91 92 93 94 95
OPARENTHESIS         : 22 33 49 64 65 88 90 91 92 93 94 95
OR                   : 29
OSBRACKET            : 
PERCENTAGE           : 59
PHPCLOSING           : 1
PHPDECLARATION       : 1
PLUS                 : 55
PLUSPLUS             : 24 69 72 92
POINT                : 
POW                  : 60
PRINT                : 
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
REQUIRE              : 
REQUIRE_ONCE         : 
RETURN               : 13 14
SCORE                : 56
SEMICOLON            : 5 13 14 15 16 17 23 24 25 91 91 92 92 93 93 95
SLASH                : 58
SPACE                : 
SQUOTATION           : 
STATIC               : 
STRING               : 
STRINGGWR            : 52 80 83
STRINGWR             : 51 79 82
SWITCH               : 
TIMES                : 57
TRAIT                : 
TRUE                 : 26 53
UNDERSCORE           : 
VAR                  : 
VARIABLE             : 
VOID                 : 
WHILE                : 94 95
XOR                  : 30
error                : 

Nonterminals, with rules where they appear

arg                  : 78 81 82 83 90
argfunc              : 86 88
auxsentif            : 18 19
bool                 : 
call_function        : 5 48
cond                 : 14 17 22 62 62 63 63 65 91 92 93 94 95
declaracion_sentencias : 1 2 20 22 88 91 92 93 94 95
empty                : 21
exp                  : 16 23 74
expsimple            : 32 32 33 33 34 42 49 77 91 91 92 93
factor               : 44 45
genif                : 18 19
opcomparacion        : 32 33 62
oplogicos            : 63
opmult               : 44
opsuma               : 42
program              : 0
sentassign           : 4
sentdowhile          : 12
sentecho             : 7
sentencias           : 2 3
sentfor              : 10
sentfunc             : 8
sentif               : 6
sentreturn           : 9
sentwhile            : 11
term                 : 42 43 44
type                 : 13 61 64 76 78
typevar              : 15 66 73
var_declaration_gen  : 67 75 81

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PHPDECLARATION declaracion_sentencias PHPCLOSING

    PHPDECLARATION  shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PHPDECLARATION . declaracion_sentencias PHPCLOSING
    (2) declaracion_sentencias -> . sentencias declaracion_sentencias
    (3) declaracion_sentencias -> . sentencias
    (4) sentencias -> . sentassign
    (5) sentencias -> . call_function SEMICOLON
    (6) sentencias -> . sentif
    (7) sentencias -> . sentecho
    (8) sentencias -> . sentfunc
    (9) sentencias -> . sentreturn
    (10) sentencias -> . sentfor
    (11) sentencias -> . sentwhile
    (12) sentencias -> . sentdowhile
    (23) sentassign -> . ID EQUAL exp SEMICOLON
    (24) sentassign -> . ID PLUSPLUS SEMICOLON
    (25) sentassign -> . ID MINUSMINUS SEMICOLON
    (89) call_function -> . NAMEFUNCTION
    (90) call_function -> . NAMEFUNCTION OPARENTHESIS arg CPARENTHESIS
    (18) sentif -> . IF genif auxsentif
    (15) sentecho -> . ECHO typevar SEMICOLON
    (16) sentecho -> . ECHO exp SEMICOLON
    (17) sentecho -> . ECHO cond SEMICOLON
    (88) sentfunc -> . FUNCTION NAMEFUNCTION OPARENTHESIS argfunc CPARENTHESIS OCBRACKET declaracion_sentencias CCBRACKET
    (13) sentreturn -> . RETURN type SEMICOLON
    (14) sentreturn -> . RETURN cond SEMICOLON
    (91) sentfor -> . FOR OPARENTHESIS ID EQUAL expsimple SEMICOLON cond SEMICOLON expsimple CPARENTHESIS OCBRACKET declaracion_sentencias CCBRACKET
    (92) sentfor -> . FOR OPARENTHESIS ID EQUAL expsimple SEMICOLON cond SEMICOLON ID PLUSPLUS CPARENTHESIS OCBRACKET declaracion_sentencias CCBRACKET
    (93) sentfor -> . FOR OPARENTHESIS ID EQUAL expsimple SEMICOLON cond SEMICOLON ID MINUSMINUS CPARENTHESIS OCBRACKET declaracion_sentencias CCBRACKET
    (94) sentwhile -> . WHILE OPARENTHESIS cond CPARENTHESIS OCBRACKET declaracion_sentencias CCBRACKET
    (95) sentdowhile -> . DO OCBRACKET declaracion_sentencias CCBRACKET WHILE OPARENTHESIS cond CPARENTHESIS SEMICOLON

    ID              shift and go to state 14
    NAMEFUNCTION    shift and go to state 15
    IF              shift and go to state 16
    ECHO            shift and go to state 17
    FUNCTION        shift and go to state 18
    RETURN          shift and go to state 19
    FOR             shift and go to state 20
    WHILE           shift and go to state 21
    DO              shift and go to state 22

    declaracion_sentencias         shift and go to state 3
    sentencias                     shift and go to state 4
    sentassign                     shift and go to state 5
    call_function                  shift and go to state 6
    sentif                         shift and go to state 7
    sentecho                       shift and go to state 8
    sentfunc                       shift and go to state 9
    sentreturn                     shift and go to state 10
    sentfor                        shift and go to state 11
    sentwhile                      shift and go to state 12
    sentdowhile                    shift and go to state 13

state 3

    (1) program -> PHPDECLARATION declaracion_sentencias . PHPCLOSING

    PHPCLOSING      shift and go to state 23


state 4

    (2) declaracion_sentencias -> sentencias . declaracion_sentencias
    (3) declaracion_sentencias -> sentencias .
    (2) declaracion_sentencias -> . sentencias declaracion_sentencias
    (3) declaracion_sentencias -> . sentencias
    (4) sentencias -> . sentassign
    (5) sentencias -> . call_function SEMICOLON
    (6) sentencias -> . sentif
    (7) sentencias -> . sentecho
    (8) sentencias -> . sentfunc
    (9) sentencias -> . sentreturn
    (10) sentencias -> . sentfor
    (11) sentencias -> . sentwhile
    (12) sentencias -> . sentdowhile
    (23) sentassign -> . ID EQUAL exp SEMICOLON
    (24) sentassign -> . ID PLUSPLUS SEMICOLON
    (25) sentassign -> . ID MINUSMINUS SEMICOLON
    (89) call_function -> . NAMEFUNCTION
    (90) call_function -> . NAMEFUNCTION OPARENTHESIS arg CPARENTHESIS
    (18) sentif -> . IF genif auxsentif
    (15) sentecho -> . ECHO typevar SEMICOLON
    (16) sentecho -> . ECHO exp SEMICOLON
    (17) sentecho -> . ECHO cond SEMICOLON
    (88) sentfunc -> . FUNCTION NAMEFUNCTION OPARENTHESIS argfunc CPARENTHESIS OCBRACKET declaracion_sentencias CCBRACKET
    (13) sentreturn -> . RETURN type SEMICOLON
    (14) sentreturn -> . RETURN cond SEMICOLON
    (91) sentfor -> . FOR OPARENTHESIS ID EQUAL expsimple SEMICOLON cond SEMICOLON expsimple CPARENTHESIS OCBRACKET declaracion_sentencias CCBRACKET
    (92) sentfor -> . FOR OPARENTHESIS ID EQUAL expsimple SEMICOLON cond SEMICOLON ID PLUSPLUS CPARENTHESIS OCBRACKET declaracion_sentencias CCBRACKET
    (93) sentfor -> . FOR OPARENTHESIS ID EQUAL expsimple SEMICOLON cond SEMICOLON ID MINUSMINUS CPARENTHESIS OCBRACKET declaracion_sentencias CCBRACKET
    (94) sentwhile -> . WHILE OPARENTHESIS cond CPARENTHESIS OCBRACKET declaracion_sentencias CCBRACKET
    (95) sentdowhile -> . DO OCBRACKET declaracion_sentencias CCBRACKET WHILE OPARENTHESIS cond CPARENTHESIS SEMICOLON

    PHPCLOSING      reduce using rule 3 (declaracion_sentencias -> sentencias .)
    CCBRACKET       reduce using rule 3 (declaracion_sentencias -> sentencias .)
    ID              shift and go to state 14
    NAMEFUNCTION    shift and go to state 15
    IF              shift and go to state 16
    ECHO            shift and go to state 17
    FUNCTION        shift and go to state 18
    RETURN          shift and go to state 19
    FOR             shift and go to state 20
    WHILE           shift and go to state 21
    DO              shift and go to state 22

    sentencias                     shift and go to state 4
    declaracion_sentencias         shift and go to state 24
    sentassign                     shift and go to state 5
    call_function                  shift and go to state 6
    sentif                         shift and go to state 7
    sentecho                       shift and go to state 8
    sentfunc                       shift and go to state 9
    sentreturn                     shift and go to state 10
    sentfor                        shift and go to state 11
    sentwhile                      shift and go to state 12
    sentdowhile                    shift and go to state 13

state 5

    (4) sentencias -> sentassign .

    ID              reduce using rule 4 (sentencias -> sentassign .)
    NAMEFUNCTION    reduce using rule 4 (sentencias -> sentassign .)
    IF              reduce using rule 4 (sentencias -> sentassign .)
    ECHO            reduce using rule 4 (sentencias -> sentassign .)
    FUNCTION        reduce using rule 4 (sentencias -> sentassign .)
    RETURN          reduce using rule 4 (sentencias -> sentassign .)
    FOR             reduce using rule 4 (sentencias -> sentassign .)
    WHILE           reduce using rule 4 (sentencias -> sentassign .)
    DO              reduce using rule 4 (sentencias -> sentassign .)
    PHPCLOSING      reduce using rule 4 (sentencias -> sentassign .)
    CCBRACKET       reduce using rule 4 (sentencias -> sentassign .)


state 6

    (5) sentencias -> call_function . SEMICOLON

    SEMICOLON       shift and go to state 25


state 7

    (6) sentencias -> sentif .

    ID              reduce using rule 6 (sentencias -> sentif .)
    NAMEFUNCTION    reduce using rule 6 (sentencias -> sentif .)
    IF              reduce using rule 6 (sentencias -> sentif .)
    ECHO            reduce using rule 6 (sentencias -> sentif .)
    FUNCTION        reduce using rule 6 (sentencias -> sentif .)
    RETURN          reduce using rule 6 (sentencias -> sentif .)
    FOR             reduce using rule 6 (sentencias -> sentif .)
    WHILE           reduce using rule 6 (sentencias -> sentif .)
    DO              reduce using rule 6 (sentencias -> sentif .)
    PHPCLOSING      reduce using rule 6 (sentencias -> sentif .)
    CCBRACKET       reduce using rule 6 (sentencias -> sentif .)


state 8

    (7) sentencias -> sentecho .

    ID              reduce using rule 7 (sentencias -> sentecho .)
    NAMEFUNCTION    reduce using rule 7 (sentencias -> sentecho .)
    IF              reduce using rule 7 (sentencias -> sentecho .)
    ECHO            reduce using rule 7 (sentencias -> sentecho .)
    FUNCTION        reduce using rule 7 (sentencias -> sentecho .)
    RETURN          reduce using rule 7 (sentencias -> sentecho .)
    FOR             reduce using rule 7 (sentencias -> sentecho .)
    WHILE           reduce using rule 7 (sentencias -> sentecho .)
    DO              reduce using rule 7 (sentencias -> sentecho .)
    PHPCLOSING      reduce using rule 7 (sentencias -> sentecho .)
    CCBRACKET       reduce using rule 7 (sentencias -> sentecho .)


state 9

    (8) sentencias -> sentfunc .

    ID              reduce using rule 8 (sentencias -> sentfunc .)
    NAMEFUNCTION    reduce using rule 8 (sentencias -> sentfunc .)
    IF              reduce using rule 8 (sentencias -> sentfunc .)
    ECHO            reduce using rule 8 (sentencias -> sentfunc .)
    FUNCTION        reduce using rule 8 (sentencias -> sentfunc .)
    RETURN          reduce using rule 8 (sentencias -> sentfunc .)
    FOR             reduce using rule 8 (sentencias -> sentfunc .)
    WHILE           reduce using rule 8 (sentencias -> sentfunc .)
    DO              reduce using rule 8 (sentencias -> sentfunc .)
    PHPCLOSING      reduce using rule 8 (sentencias -> sentfunc .)
    CCBRACKET       reduce using rule 8 (sentencias -> sentfunc .)


state 10

    (9) sentencias -> sentreturn .

    ID              reduce using rule 9 (sentencias -> sentreturn .)
    NAMEFUNCTION    reduce using rule 9 (sentencias -> sentreturn .)
    IF              reduce using rule 9 (sentencias -> sentreturn .)
    ECHO            reduce using rule 9 (sentencias -> sentreturn .)
    FUNCTION        reduce using rule 9 (sentencias -> sentreturn .)
    RETURN          reduce using rule 9 (sentencias -> sentreturn .)
    FOR             reduce using rule 9 (sentencias -> sentreturn .)
    WHILE           reduce using rule 9 (sentencias -> sentreturn .)
    DO              reduce using rule 9 (sentencias -> sentreturn .)
    PHPCLOSING      reduce using rule 9 (sentencias -> sentreturn .)
    CCBRACKET       reduce using rule 9 (sentencias -> sentreturn .)


state 11

    (10) sentencias -> sentfor .

    ID              reduce using rule 10 (sentencias -> sentfor .)
    NAMEFUNCTION    reduce using rule 10 (sentencias -> sentfor .)
    IF              reduce using rule 10 (sentencias -> sentfor .)
    ECHO            reduce using rule 10 (sentencias -> sentfor .)
    FUNCTION        reduce using rule 10 (sentencias -> sentfor .)
    RETURN          reduce using rule 10 (sentencias -> sentfor .)
    FOR             reduce using rule 10 (sentencias -> sentfor .)
    WHILE           reduce using rule 10 (sentencias -> sentfor .)
    DO              reduce using rule 10 (sentencias -> sentfor .)
    PHPCLOSING      reduce using rule 10 (sentencias -> sentfor .)
    CCBRACKET       reduce using rule 10 (sentencias -> sentfor .)


state 12

    (11) sentencias -> sentwhile .

    ID              reduce using rule 11 (sentencias -> sentwhile .)
    NAMEFUNCTION    reduce using rule 11 (sentencias -> sentwhile .)
    IF              reduce using rule 11 (sentencias -> sentwhile .)
    ECHO            reduce using rule 11 (sentencias -> sentwhile .)
    FUNCTION        reduce using rule 11 (sentencias -> sentwhile .)
    RETURN          reduce using rule 11 (sentencias -> sentwhile .)
    FOR             reduce using rule 11 (sentencias -> sentwhile .)
    WHILE           reduce using rule 11 (sentencias -> sentwhile .)
    DO              reduce using rule 11 (sentencias -> sentwhile .)
    PHPCLOSING      reduce using rule 11 (sentencias -> sentwhile .)
    CCBRACKET       reduce using rule 11 (sentencias -> sentwhile .)


state 13

    (12) sentencias -> sentdowhile .

    ID              reduce using rule 12 (sentencias -> sentdowhile .)
    NAMEFUNCTION    reduce using rule 12 (sentencias -> sentdowhile .)
    IF              reduce using rule 12 (sentencias -> sentdowhile .)
    ECHO            reduce using rule 12 (sentencias -> sentdowhile .)
    FUNCTION        reduce using rule 12 (sentencias -> sentdowhile .)
    RETURN          reduce using rule 12 (sentencias -> sentdowhile .)
    FOR             reduce using rule 12 (sentencias -> sentdowhile .)
    WHILE           reduce using rule 12 (sentencias -> sentdowhile .)
    DO              reduce using rule 12 (sentencias -> sentdowhile .)
    PHPCLOSING      reduce using rule 12 (sentencias -> sentdowhile .)
    CCBRACKET       reduce using rule 12 (sentencias -> sentdowhile .)


state 14

    (23) sentassign -> ID . EQUAL exp SEMICOLON
    (24) sentassign -> ID . PLUSPLUS SEMICOLON
    (25) sentassign -> ID . MINUSMINUS SEMICOLON

    EQUAL           shift and go to state 26
    PLUSPLUS        shift and go to state 27
    MINUSMINUS      shift and go to state 28


state 15

    (89) call_function -> NAMEFUNCTION .
    (90) call_function -> NAMEFUNCTION . OPARENTHESIS arg CPARENTHESIS

    SEMICOLON       reduce using rule 89 (call_function -> NAMEFUNCTION .)
    TIMES           reduce using rule 89 (call_function -> NAMEFUNCTION .)
    SLASH           reduce using rule 89 (call_function -> NAMEFUNCTION .)
    PERCENTAGE      reduce using rule 89 (call_function -> NAMEFUNCTION .)
    POW             reduce using rule 89 (call_function -> NAMEFUNCTION .)
    EQUALE          reduce using rule 89 (call_function -> NAMEFUNCTION .)
    DEQUAL          reduce using rule 89 (call_function -> NAMEFUNCTION .)
    IDENTIC         reduce using rule 89 (call_function -> NAMEFUNCTION .)
    GREAT           reduce using rule 89 (call_function -> NAMEFUNCTION .)
    GREATE          reduce using rule 89 (call_function -> NAMEFUNCTION .)
    LESS            reduce using rule 89 (call_function -> NAMEFUNCTION .)
    LESSE           reduce using rule 89 (call_function -> NAMEFUNCTION .)
    PLUS            reduce using rule 89 (call_function -> NAMEFUNCTION .)
    SCORE           reduce using rule 89 (call_function -> NAMEFUNCTION .)
    AND             reduce using rule 89 (call_function -> NAMEFUNCTION .)
    OR              reduce using rule 89 (call_function -> NAMEFUNCTION .)
    XOR             reduce using rule 89 (call_function -> NAMEFUNCTION .)
    NOT             reduce using rule 89 (call_function -> NAMEFUNCTION .)
    CPARENTHESIS    reduce using rule 89 (call_function -> NAMEFUNCTION .)
    COMMA           reduce using rule 89 (call_function -> NAMEFUNCTION .)
    OPARENTHESIS    shift and go to state 29


state 16

    (18) sentif -> IF . genif auxsentif
    (22) genif -> . OPARENTHESIS cond CPARENTHESIS OCBRACKET declaracion_sentencias CCBRACKET

    OPARENTHESIS    shift and go to state 31

    genif                          shift and go to state 30

state 17

    (15) sentecho -> ECHO . typevar SEMICOLON
    (16) sentecho -> ECHO . exp SEMICOLON
    (17) sentecho -> ECHO . cond SEMICOLON
    (50) typevar -> . NUMBER
    (51) typevar -> . STRINGWR
    (52) typevar -> . STRINGGWR
    (53) typevar -> . TRUE
    (54) typevar -> . FALSE
    (32) exp -> . expsimple opcomparacion expsimple
    (33) exp -> . OPARENTHESIS expsimple opcomparacion expsimple CPARENTHESIS
    (34) exp -> . expsimple
    (61) cond -> . type
    (62) cond -> . cond opcomparacion cond
    (63) cond -> . cond oplogicos cond
    (64) cond -> . OPARENTHESIS type CPARENTHESIS
    (65) cond -> . OPARENTHESIS cond CPARENTHESIS
    (42) expsimple -> . expsimple opsuma term
    (43) expsimple -> . term
    (66) type -> . typevar
    (67) type -> . var_declaration_gen
    (44) term -> . term opmult factor
    (45) term -> . factor
    (68) var_declaration_gen -> . ID
    (69) var_declaration_gen -> . ID PLUSPLUS
    (70) var_declaration_gen -> . ID MINUSMINUS
    (71) var_declaration_gen -> . MINUSMINUS ID
    (72) var_declaration_gen -> . PLUSPLUS ID
    (73) var_declaration_gen -> . typevar
    (74) var_declaration_gen -> . exp
    (46) factor -> . NUMBER
    (47) factor -> . ID
    (48) factor -> . call_function
    (49) factor -> . OPARENTHESIS expsimple CPARENTHESIS
    (89) call_function -> . NAMEFUNCTION
    (90) call_function -> . NAMEFUNCTION OPARENTHESIS arg CPARENTHESIS

    NUMBER          shift and go to state 35
    STRINGWR        shift and go to state 36
    STRINGGWR       shift and go to state 37
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39
    OPARENTHESIS    shift and go to state 41
    ID              shift and go to state 46
    MINUSMINUS      shift and go to state 48
    PLUSPLUS        shift and go to state 47
    NAMEFUNCTION    shift and go to state 15

    typevar                        shift and go to state 32
    exp                            shift and go to state 33
    cond                           shift and go to state 34
    expsimple                      shift and go to state 40
    type                           shift and go to state 42
    term                           shift and go to state 43
    var_declaration_gen            shift and go to state 44
    factor                         shift and go to state 45
    call_function                  shift and go to state 49

state 18

    (88) sentfunc -> FUNCTION . NAMEFUNCTION OPARENTHESIS argfunc CPARENTHESIS OCBRACKET declaracion_sentencias CCBRACKET

    NAMEFUNCTION    shift and go to state 50


state 19

    (13) sentreturn -> RETURN . type SEMICOLON
    (14) sentreturn -> RETURN . cond SEMICOLON
    (66) type -> . typevar
    (67) type -> . var_declaration_gen
    (61) cond -> . type
    (62) cond -> . cond opcomparacion cond
    (63) cond -> . cond oplogicos cond
    (64) cond -> . OPARENTHESIS type CPARENTHESIS
    (65) cond -> . OPARENTHESIS cond CPARENTHESIS
    (50) typevar -> . NUMBER
    (51) typevar -> . STRINGWR
    (52) typevar -> . STRINGGWR
    (53) typevar -> . TRUE
    (54) typevar -> . FALSE
    (68) var_declaration_gen -> . ID
    (69) var_declaration_gen -> . ID PLUSPLUS
    (70) var_declaration_gen -> . ID MINUSMINUS
    (71) var_declaration_gen -> . MINUSMINUS ID
    (72) var_declaration_gen -> . PLUSPLUS ID
    (73) var_declaration_gen -> . typevar
    (74) var_declaration_gen -> . exp
    (32) exp -> . expsimple opcomparacion expsimple
    (33) exp -> . OPARENTHESIS expsimple opcomparacion expsimple CPARENTHESIS
    (34) exp -> . expsimple
    (42) expsimple -> . expsimple opsuma term
    (43) expsimple -> . term
    (44) term -> . term opmult factor
    (45) term -> . factor
    (46) factor -> . NUMBER
    (47) factor -> . ID
    (48) factor -> . call_function
    (49) factor -> . OPARENTHESIS expsimple CPARENTHESIS
    (89) call_function -> . NAMEFUNCTION
    (90) call_function -> . NAMEFUNCTION OPARENTHESIS arg CPARENTHESIS

    OPARENTHESIS    shift and go to state 54
    NUMBER          shift and go to state 35
    STRINGWR        shift and go to state 36
    STRINGGWR       shift and go to state 37
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39
    ID              shift and go to state 46
    MINUSMINUS      shift and go to state 48
    PLUSPLUS        shift and go to state 47
    NAMEFUNCTION    shift and go to state 15

    type                           shift and go to state 51
    cond                           shift and go to state 52
    typevar                        shift and go to state 53
    var_declaration_gen            shift and go to state 44
    exp                            shift and go to state 55
    expsimple                      shift and go to state 40
    term                           shift and go to state 43
    factor                         shift and go to state 45
    call_function                  shift and go to state 49

state 20

    (91) sentfor -> FOR . OPARENTHESIS ID EQUAL expsimple SEMICOLON cond SEMICOLON expsimple CPARENTHESIS OCBRACKET declaracion_sentencias CCBRACKET
    (92) sentfor -> FOR . OPARENTHESIS ID EQUAL expsimple SEMICOLON cond SEMICOLON ID PLUSPLUS CPARENTHESIS OCBRACKET declaracion_sentencias CCBRACKET
    (93) sentfor -> FOR . OPARENTHESIS ID EQUAL expsimple SEMICOLON cond SEMICOLON ID MINUSMINUS CPARENTHESIS OCBRACKET declaracion_sentencias CCBRACKET

    OPARENTHESIS    shift and go to state 56


state 21

    (94) sentwhile -> WHILE . OPARENTHESIS cond CPARENTHESIS OCBRACKET declaracion_sentencias CCBRACKET

    OPARENTHESIS    shift and go to state 57


state 22

    (95) sentdowhile -> DO . OCBRACKET declaracion_sentencias CCBRACKET WHILE OPARENTHESIS cond CPARENTHESIS SEMICOLON

    OCBRACKET       shift and go to state 58


state 23

    (1) program -> PHPDECLARATION declaracion_sentencias PHPCLOSING .

    $end            reduce using rule 1 (program -> PHPDECLARATION declaracion_sentencias PHPCLOSING .)


state 24

    (2) declaracion_sentencias -> sentencias declaracion_sentencias .

    PHPCLOSING      reduce using rule 2 (declaracion_sentencias -> sentencias declaracion_sentencias .)
    CCBRACKET       reduce using rule 2 (declaracion_sentencias -> sentencias declaracion_sentencias .)


state 25

    (5) sentencias -> call_function SEMICOLON .

    ID              reduce using rule 5 (sentencias -> call_function SEMICOLON .)
    NAMEFUNCTION    reduce using rule 5 (sentencias -> call_function SEMICOLON .)
    IF              reduce using rule 5 (sentencias -> call_function SEMICOLON .)
    ECHO            reduce using rule 5 (sentencias -> call_function SEMICOLON .)
    FUNCTION        reduce using rule 5 (sentencias -> call_function SEMICOLON .)
    RETURN          reduce using rule 5 (sentencias -> call_function SEMICOLON .)
    FOR             reduce using rule 5 (sentencias -> call_function SEMICOLON .)
    WHILE           reduce using rule 5 (sentencias -> call_function SEMICOLON .)
    DO              reduce using rule 5 (sentencias -> call_function SEMICOLON .)
    PHPCLOSING      reduce using rule 5 (sentencias -> call_function SEMICOLON .)
    CCBRACKET       reduce using rule 5 (sentencias -> call_function SEMICOLON .)


state 26
